8377006: [lworld] Enable tests for strict instance fields and strict static fields